# phx-common-modules

./: README.md  pyproject.toml
src/data/: __init__.py  pagination.py
src/exceptions/: __init__.py  bad_request_exception.py  not_found_exception.py  service_unavailable_exception.py  unauthorized_exception.py  unprocessable_entity_exception.py
src/http/: exception_handlers.py
src/response/: __init__.py  api_response_dto.py
sucrim/http/: __init__.py  exception_handlers.py
sucrim/http/errors/: __init__.py  business_exception.py  conflict_exception.py  forbidden_exception.py  internal_server_error_exception.py  validation_exception.py
sucrim/keycloak/: __init__.py  keycloak_auth_provider.py  keycloak_config.py  keycloak_jwt_decoder.py  keycloak_user.py
sucrim/utils/: __init__.py  date_utils.py
tests/: test_date_utils.py  test_exceptions.py  test_http_handlers.py  test_keycloak_config.py
